feat: autenticacao com jwt
