# src/modules/accounts/useCases/authenticateUser/AuthenticateUserController.ts
@@ -1,0 +1,18 @@
+import { Request, Response } from 'express';
+import { container } from 'tsyringe';
+
+import { IAuthenticateUserDTO } from '@modules/accounts/dtos/IAuthenticateUserDTO';
+
+import { AuthenticateUserUseCase } from './AuthenticateUserUseCase';
+
+export class AuthenticateUserController {
+  async handle(request: Request, response: Response): Promise<Response> {
+    const { email, password }: IAuthenticateUserDTO = request.body;
+
+    const authenticateUserUseCase = container.resolve(AuthenticateUserUseCase);
+
+    const token = await authenticateUserUseCase.execute({ email, password });
+
+    return response.json(token);
+  }
+}
