# src/shared/infra/http/routes/index.ts
@@ -1,5 +1,6 @@
 import { Router } from 'express';
 
+import { authenticateRouter } from './authenticate.routes';
 import { categoriesRouter } from './categories.routes';
 import { specificationsRouter } from './specifications.routes';
 import { usersRouter } from './users.routes';
@@ -9,5 +10,6 @@ const routes = Router();
 routes.use('/categories', categoriesRouter);
 routes.use('/specifications', specificationsRouter);
 routes.use('/accounts', usersRouter);
+routes.use('/sessions', authenticateRouter);
 
 export { routes };
